# state_machine

./: CMakeLists.txt  main.cpp
crc32_test/: CMakeLists.txt
crc32_test/headers/: Archive.h  CRC.h  Config.h  Deserializer.h  Serializer.h
crc32_test/src/: Archive.cpp  CRC.cpp  Config.cpp  Deserializer.cpp  Serializer.cpp  main.cpp
test/: CMakeLists.txt  test1.cpp
